--- a/adam.css
+++ b/adam.css
@@ -26,11 +26,11 @@ a:hover, a:active {
 }
 
 table {
-	margin-left: auto;
-	margin-right: auto;
-	text-align: left;
-	border-collapse: collapse;
-	cellspacing: 2px;
+	width:80%;
+	margin-left: 2px;
+	margin-right: 2px;
+	text-align: center;
+
 }
 
 tr {
