--- a/adam.css
+++ b/adam.css
@@ -14,7 +14,7 @@ h1 {
 a:link, a:visited {
     background-color: #105268;
     color: white;
-    padding: 3px 3px;
+    padding: 15px 30px;
     text-align: center;
     text-decoration: none;
     display: inline-block;
@@ -26,7 +26,8 @@ a:hover, a:active {
 }
 
 table {
-	width:200px;
+	
+	width:80%;
 	margin-left: 2px;
 	margin-right: 2px;
 	text-align: center;
