--- a/my_website/adam.css
+++ b/my_website/adam.css
@@ -3,7 +3,8 @@ body{
 	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 	color: #ffffcc;
 	background-image: url("images/city.jpg");
-	background-repeat: repeat-x;
+	background-size: 100% 100%;
+    background-repeat: no-repeat;
 }
 
 h1 {
