--- a/CSP/adam.css
+++ b/CSP/adam.css
@@ -11,7 +11,6 @@ h1 {
 	font-size: 1.3em;
 	text-align: center;
 }
-
 a:link, a:visited {
     background-color: #105268;
     color: white;
@@ -24,6 +23,7 @@ a:link, a:visited {
 
 a:hover, a:active {
     color: yellow;
+    background-color: blue;
 }
 
 table {
