--- a/index.css
+++ b/index.css
@@ -2,7 +2,7 @@ body{
 	background-color:#000000;
 	font-family: "Avant Garde", Avantgarde, "Century Gothic", CenturyGothic, AppleGothic, sans-serif;
 	color: #ffffcc;
-	background-image: url("images/city.jpg");
+	background-image: url("indexpics/city.jpg");
 	background-size: 100% ;
     background-repeat: no-repeat;
 }
@@ -10,6 +10,7 @@ body{
 h1 {
 	font-size: 1.3em;
 	text-align: center;
+	
 }
 a:link, a:visited {
     background-color: #105268;
@@ -22,8 +23,8 @@ a:link, a:visited {
 
 
 a:hover, a:active {
-    color: yellow;
-    background-color: blue;
+    color: white;
+    background-color: gray;
 }
 
 table {
@@ -32,6 +33,7 @@ table {
 	margin-left: 10%;
 	margin-right: 10%;
 	text-align: center;
+
 	
 
 }
@@ -43,7 +45,8 @@ td {
 tr {
 	border: 1px solid #ffffff;
 	text-align: center;
-	background-color:#9FB6CD; 
+	background-color: gray;
+	background-color: rgba(155, 155, 155, 0.5);
 }
 
 th {
