--- a/index.css
+++ b/index.css
@@ -33,17 +33,16 @@ table {
 	margin-left: 10%;
 	margin-right: 10%;
 	text-align: center;
-
-	
-
 }
 
 td {
 	vertical-align: middle;
+	padding:3px;
+	margin:10px;
 }
 
 tr {
-	border: 1px solid #ffffff;
+	border: 3px solid #ffffff;
 	text-align: center;
 	background-color: gray;
 	background-color: rgba(155, 155, 155, 0.5);
@@ -52,5 +51,30 @@ tr {
 th {
 	text-align: center;
 	color: #ffffff;
-	background-color: #003366;
+	background-color: #105268;
+}
+
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 5px;
+    overflow: hidden;
+    background-color: #105268;
+}
+
+li {
+    float: left;
+}
+
+li a {
+    display: block;
+    color: white;
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+/* Change the link color to #111 (black) on hover */
+li a:hover {
+    background-color: #111;
 }
